src/objects/Chemo_Therapy_Regimen__c.object
<CustomObject>
    <fields>
        <fullName>Administered_dose_Units__c</fullName>
        <label>Administered dose Units</label>
        <picklist>
            <picklistValues>
                <fullName>mg</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipLabel>Chemo Therapy Regimens</relationshipLabel>
        <relationshipName>Chemo_Therapy_Regimens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chemo_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chemo Treatment</label>
        <referenceTo>Chemo_Treatment__c</referenceTo>
        <relationshipLabel>Chemo Therapy Regimens</relationshipLabel>
        <relationshipName>Chemo_Therapy_Regimens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_patient_stop_receiving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did patient stop receiving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dose_Delay__c</fullName>
        <label>Dose Delay?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_Mod_Reason_Number__c</fullName>
        <formula>IF( ISPICKVAL( Dose_modification__c , &quot;No dose modification&quot;),0,
         IF(ISPICKVAL( Dose_modification__c , &quot;Dose held (not given)&quot;),1,
                IF(ISPICKVAL( Dose_modification__c , &quot;Dose delayed&quot;),2,
                          IF(ISPICKVAL( Dose_modification__c , &quot;Dose reduced&quot;),3,
                                      IF(ISPICKVAL( Dose_modification__c , &quot;Dose delayed and reduced&quot;),4,
                                                IF(ISPICKVAL( Dose_modification__c , &quot;Drug discontinued early&quot;),5,
                                                          IF(ISPICKVAL( Dose_modification__c , &quot;Dosing error&quot;),6,99
                                                           )
                                                )
                                      )
                          )
                )
         )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dose Mod Reason Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dose_Mod_Reason__c</fullName>
        <label>Dose Mod Reason</label>
        <picklist>
            <picklistValues>
                <fullName>No dose modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose held (not given)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose reduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose delayed and reduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug discontinued early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosing error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dose_Mod__c</fullName>
        <label>Dose Mod</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dose_modification__c</fullName>
        <label>Dose modification</label>
        <picklist>
            <picklistValues>
                <fullName>No dose modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose held (not given)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose delayed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose reduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dose delayed and reduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug discontinued early</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosing error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Agent__c</fullName>
        <label>Other Agent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Dose_Mod_Reason__c</fullName>
        <label>Other Dose Mod Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Patient_Stop_Receiving__c</fullName>
        <label>Other Reason Patient Stop Receiving</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescribed_Dose__c</fullName>
        <label>Prescribed Dose</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prescribed_dose_Units__c</fullName>
        <label>Prescribed dose Units</label>
        <picklist>
            <picklistValues>
                <fullName>mg/m2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>mg/kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_why_patient_stopped_receiving__c</fullName>
        <label>Reason why patient stopped receiving</label>
        <picklist>
            <picklistValues>
                <fullName>Due to progression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due to S/AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Chemo Therapy Regimens</relationshipLabel>
        <relationshipName>Chemo_Therapy_Regimens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Color__c</fullName>
        <description>To be used in AE Report only. This report uses this object&apos;s rows in GUI, but we need different color for alternate rows. We can use wrapper, but this is lot of work for small thing. So adding this field here and value will be set in AE report class but never saved.</description>
        <inlineHelpText>To be used in AE Report only. This report uses this object&apos;s rows in GUI, but we need different color for alternate rows. We can use wrapper, but this is lot of work for small thing. So adding this field here and value will be set in AE report class but n</inlineHelpText>
        <label>Row Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Dose__c</fullName>
        <label>Total Dose Administered</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pg_ChemotherapyRegimens_Id__c</fullName>
        <label>pg_ChemotherapyRegimens_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Chemo Therapy Regimen</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chemo Therapy Regims Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chemo Therapy Regimens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>